fix vertical spacing on list and body

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0;
+}
 header {
   background-color: blueviolet;
 }
@@ -5,5 +8,13 @@ main {
   background-color: pink;
 }
 footer {
-  background-color: green;
+  background-color: blue;
+  margin: 0;
+}
+ul {
+  margin: 0;
+}
+
+h1 {
+  margin: 0;
 }
